--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "mohammedamer-github-io"
+name = "ofiz"
 version = "0.1.0"
-description = "Add your description here"
+description = "OpenFoam Visualizations"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
