--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "matplotlib>=3.10.6",
     "meshio>=5.3.5",
     "numpy>=2.3.3",
+    "pytest>=8.4.2",
     "pyvista>=0.46.3",
     "scipy>=1.16.2",
     "tqdm>=4.67.1",
